--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="Raleway-Italic.ttf" />
-    <title>Часовой поясом</title>
+    <title>Часовой пояс</title>
   </head>
   <body>
     <div class="wrapper">
